# cpp20-option-pricer

./: .gitignore  CMakeLists.txt  README.md
include/pricer/: pricer.hpp
include/pricer/core/: arena.hpp  concepts.hpp  errors.hpp  sobol.hpp  thread_pool.hpp  types.hpp
include/pricer/engines/: barrier_mc.hpp  black_scholes.hpp  fd_pde.hpp  heston_mc.hpp  mc.hpp
include/pricer/execution/: algo.hpp  backtest.hpp  order_book.hpp  performance.hpp  signal.hpp  tca.hpp
include/pricer/models/: barrier.hpp  heston.hpp  rates.hpp  vol.hpp
python/: bindings.cpp  demo.ipynb  demo.py
src/: main.cpp
tests/: test_pricer.cpp
